@@ -1,3 +1,10 @@
+2001-05-22  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>
+
+	* Makefile (BUNDLERULES): Abstracted redundant code for creating
+	the distribution tarballs.  Changed to remove CVS subdirs.
+	(CONTRIB): Added a list of files in contrib to the ALLFILES macro.
+	(DEBFILES): Updated to reflect changes made to the debian dir.
+
 2001-05-22  Elliot Glaysher  <nuriko.chan@home.com>
 
 	* debian/netcomics.files: Explicitly declare /usr/lib/perl5/Netcomics*
